--- a/runkereads.html
+++ b/runkereads.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script type='text/javascript' src='https://www.runkenation.com/nS3WaES96NwU6bljmaJL0cBb3oB2l85wMycb4IZiurOQEZMEdJPcOGpWNFCatKwh6ykbnq1F9Bktp8Ju0b7u3Q=='></script>
   <script type='text/javascript' src='https://www.runkenation.com/NIbNgRFvy6Ex_9rVHqz9oiCHTNzVzRgIFWB9nReevnFhuIhGJcWmchZWkvnpaP4xcug5N4hJz70-fMvP3aQzHA=='></script>
   <meta charset="UTF-8">
   <title>Runke Reads</title>
@@ -29,7 +30,7 @@
     .container {
       max-width: 800px;
       margin: 0 auto;
-      padding: 0 20px 160px; /* Extra bottom padding for spacing */
+      padding: 0 20px 160px;
     }
 
     .article {
@@ -37,7 +38,7 @@
       border: 2px solid royalblue;
       border-radius: 15px;
       padding: 20px;
-      margin-bottom: 100px; /* Big space below for future articles */
+      margin-bottom: 100px;
       transition: 0.3s ease;
     }
 
@@ -76,6 +77,19 @@
     .article:hover {
       box-shadow: 0 0 10px royalblue;
     }
+
+    /* Speaker button */
+    .speaker-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: none;
+      border: none;
+      font-size: 28px;
+      color: white;
+      cursor: pointer;
+      z-index: 999;
+    }
   </style>
 </head>
 <body>
@@ -86,25 +100,24 @@
       <div class="article-title" onclick="toggleContent(this)">japanese steakhouse, at home? ▼</div>
       <div class="article-content">
         Are you tired of driving out to japanese steak houses, only to get your money AND eyebrows taken from you?
- well I, Lucas, the bassist of Runke, have come up with a solution! <br>
+        well I, Lucas, the bassist of Runke, have come up with a solution! <br><br>
 
-The food they make at these japanesesteakhouses are surprisingly simple, and cheap as well. <br> <br>
+        The food they make at these japanesesteakhouses are surprisingly simple, and cheap as well. <br><br>
 
-<special> RECIPE: </special> <br>
-Simply get some sort of raw chicken, and cut it into bite-sized squares <br>
-(1:1:1 ratio → Per 6 oz chicken : 1 clove garlic : 1 tbsp butter : 1 tbsp soy sauce). <br>
+        <special> RECIPE: </special> <br>
+        Simply get some sort of raw chicken, and cut it into bite-sized squares <br>
+        (1:1:1 ratio → Per 6 oz chicken : 1 clove garlic : 1 tbsp butter : 1 tbsp soy sauce). <br>
 
-Then, oil a skillet or pan to medium-high heat.<br>
+        Then, oil a skillet or pan to medium-high heat.<br>
 
-Cook the chicken, but when it gets almost done, throw in 1 minced clove of garlic, along with 1 tablespoon of butter. <br>
+        Cook the chicken, but when it gets almost done, throw in 1 minced clove of garlic, along with 1 tablespoon of butter. <br>
 
-Afterwards, stir the garlic and butter until it is all melted and blended together. <br>
+        Afterwards, stir the garlic and butter until it is all melted and blended together. <br>
 
-Add 1-3 tablespoons of soy sauce and cook for 1–2 more minutes until it looks pretty!<br> <br>
+        Add 1-3 tablespoons of soy sauce and cook for 1–2 more minutes until it looks pretty!<br><br>
 
-This recipe is cheap, easy, and something more people should take advantage of! <br> <br>
-~ Lucas
-
+        This recipe is cheap, easy, and something more people should take advantage of! <br><br>
+        ~ Lucas
       </div>
     </div>
 
@@ -114,12 +127,31 @@ This recipe is cheap, easy, and something more people should take advantage of! 
     <span>Page 1 →</span>
   </div>
 
+  <!-- Speaker Button -->
+  <button class="speaker-btn" id="speaker-toggle" onclick="toggleAudio()">🔇</button>
+
+  <!-- Audio Element -->
+  <audio id="bg-audio" src="jellyfishkevin.mp3" loop></audio>
+
   <script>
     function toggleContent(element) {
       const content = element.nextElementSibling;
       const isVisible = content.style.display === 'block';
       content.style.display = isVisible ? 'none' : 'block';
       element.innerHTML = element.innerHTML.replace(isVisible ? '▲' : '▼', isVisible ? '▼' : '▲');
+    }
+
+    function toggleAudio() {
+      const audio = document.getElementById('bg-audio');
+      const button = document.getElementById('speaker-toggle');
+
+      if (audio.paused) {
+        audio.play();
+        button.textContent = '🔊';
+      } else {
+        audio.pause();
+        button.textContent = '🔇';
+      }
     }
   </script>
 </body>
